# SpiderRos

./: .gitignore  HITO_2_RUNTIME_VALIDATION.md  README.md
WS/: explicacion_spider_model_urdf_xacro.txt
WS/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
WS/log/: latest_build
WS/src/spider_gazebo/: package.xml  setup.cfg  setup.py
WS/src/spider_gazebo/launch/: spider_lanzador.launch.py
WS/src/spider_ros/: setup.cfg  setup.py
WS/src/spider_ros/config/: spider_control.yaml
WS/src/spider_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
WS/src/spider_ros/launch/: simulacion_launch.py
WS/src/spider_ros/log/: latest_build
WS/src/spider_ros/urdf/: spider_model.urdf.xacro
install/: local_setup.sh  setup.sh
install/spider_description/lib/spider_description/: spider_ik_node.py  spider_teleop_key.py
log/: latest_build
openspec/changes/hito-3-ik-gait-node/: design.md  proposal.md  tasks.md
openspec/changes/spider-ros-base-sim/: design.md  proposal.md  tasks.md
openspec/specs/joint-position-control/: spec.md
openspec/specs/keyboard-teleop/: spec.md
openspec/specs/robot-description/: spec.md
openspec/specs/ros2-control-config/: spec.md
openspec/specs/simulation-launch/: spec.md
spider_description/: CMakeLists.txt  README.md
spider_description/config/: controllers.yaml
spider_description/launch/: spider_sim.launch.py
spider_description/meshes/: gen_dome.py
spider_description/nodes/: spider_ik_node.py  spider_teleop_key.py
spider_description/urdf/: spider.urdf.xacro
(+48 files in other folders)
